// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Donut chart interactions Should hide callout on mouse leave 1`] = `
<div>
  <div
    class="fui-donut__root"
  >
    <div
      class="fui-donut__chartWrapper"
      data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
    >
      <div
        class="fui-donut__plotContainer"
        style="width: 200px; height: 160px;"
      >
        <svg
          aria-label="Donut chart example"
          class="fui-donut__chart"
          height="160"
          width="200"
        >
          <g
            transform="translate(100, 80)"
          >
            <g>
              <path
                aria-label="2020/04/30, 20000."
                class="fui-donut-arc__root"
                d="M0.971,-79.994A80,80,0,0,1,74.697,-28.643L51.244,-19.975A55,55,0,0,0,0.971,-54.991Z"
                id="_Pie__r_0_first20000"
                opacity="1"
                role="img"
                style="fill: #E5E5E5; cursor: default;"
                tabindex="0"
              />
            </g>
            <g>
              <path
                aria-label="2020/04/20, 39000."
                class="fui-donut-arc__root"
                d="M75.37,-26.822A80,80,0,0,1,-32.382,73.153L-21.985,50.415A55,55,0,0,0,51.918,-18.154Z"
                id="_Pie__r_0_second39000"
                opacity="1"
                role="img"
                style="fill: #0078D4; cursor: default;"
                tabindex="0"
              />
            </g>
            <g>
              <path
                aria-label="2020/04/25, 45000."
                class="fui-donut-arc__root"
                d="M-34.148,72.346A80,80,0,0,1,-0.971,-79.994L-0.971,-54.991A55,55,0,0,0,-23.751,49.608Z"
                id="_Pie__r_0_third45000"
                opacity="1"
                role="img"
                style="fill: #DADADA; cursor: default;"
                tabindex="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
    <div
      class="fui-cart__calloutContainer"
      id="callout_r_1_"
    />
    <div
      class="fui-donut__legendContainer"
    >
      <div
        aria-label="Legends"
        aria-multiselectable="false"
        class="fui-legend__root"
        data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        role="listbox"
      >
        <div
          class="fui-Overflow fui-legend__resizableArea"
          style="text-align: center;"
        >
          <button
            aria-label="first"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
            />
            <div
              class="fui-legend__text"
            >
              first
            </div>
          </button>
          <button
            aria-label="second"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
            />
            <div
              class="fui-legend__text"
            >
              second
            </div>
          </button>
          <button
            aria-label="third"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
            />
            <div
              class="fui-legend__text"
            >
              third
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Donut chart interactions Should reflect theme change 1`] = `
<div>
  <div
    class="fui-FluentProvider fui-FluentProvider_r_19_"
    dir="ltr"
  >
    <div
      class="fui-donut__root"
    >
      <div
        class="fui-donut__chartWrapper"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-donut__plotContainer"
          style="width: 200px; height: 160px;"
        >
          <svg
            aria-label="Donut chart example"
            class="fui-donut__chart"
            height="160"
            width="200"
          >
            <g
              transform="translate(100, 80)"
            >
              <g>
                <path
                  aria-label="2020/04/30, 20000."
                  class="fui-donut-arc__root"
                  d="M0.971,-79.994A80,80,0,0,1,74.697,-28.643L51.244,-19.975A55,55,0,0,0,0.971,-54.991Z"
                  id="_Pie__r_1a_first20000"
                  opacity="1"
                  role="img"
                  style="fill: #E5E5E5; cursor: default;"
                  tabindex="0"
                />
              </g>
              <g>
                <path
                  aria-label="2020/04/20, 39000."
                  class="fui-donut-arc__root"
                  d="M75.37,-26.822A80,80,0,0,1,-32.382,73.153L-21.985,50.415A55,55,0,0,0,51.918,-18.154Z"
                  id="_Pie__r_1a_second39000"
                  opacity="1"
                  role="img"
                  style="fill: #0078D4; cursor: default;"
                  tabindex="0"
                />
              </g>
              <g>
                <path
                  aria-label="2020/04/25, 45000."
                  class="fui-donut-arc__root"
                  d="M-34.148,72.346A80,80,0,0,1,-0.971,-79.994L-0.971,-54.991A55,55,0,0,0,-23.751,49.608Z"
                  id="_Pie__r_1a_third45000"
                  opacity="1"
                  role="img"
                  style="fill: #DADADA; cursor: default;"
                  tabindex="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="fui-cart__calloutContainer"
        id="callout_r_1b_"
      />
      <div
        class="fui-donut__legendContainer"
      >
        <div
          aria-label="Legends"
          aria-multiselectable="false"
          class="fui-legend__root"
          data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
          role="listbox"
        >
          <div
            class="fui-Overflow fui-legend__resizableArea"
            style="text-align: center;"
          >
            <button
              aria-label="first"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
              />
              <div
                class="fui-legend__text"
              >
                first
              </div>
            </button>
            <button
              aria-label="second"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
              />
              <div
                class="fui-legend__text"
              >
                second
              </div>
            </button>
            <button
              aria-label="third"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
              />
              <div
                class="fui-legend__text"
              >
                third
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart - mouse events Should render callout correctly on mouseover 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    data-tabster="{\\"root\\":{}}"
  >
    <div>
      <div
        class="fui-donut__root"
      >
        <div
          class="fui-donut__chartWrapper"
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class="fui-donut__plotContainer"
            style="width: 200px; height: 160px;"
          >
            <svg
              aria-label="Donut chart example"
              class="fui-donut__chart"
              height="160"
              width="200"
            >
              <g
                transform="translate(100, 80)"
              >
                <g>
                  <path
                    aria-label="2020/04/30, 20000."
                    class="fui-donut-arc__root"
                    d="M0.971,-79.994A80,80,0,0,1,74.697,-28.643L51.244,-19.975A55,55,0,0,0,0.971,-54.991Z"
                    id="_Pie__r_2o_first20000"
                    opacity="1"
                    role="img"
                    style="fill: #E5E5E5; cursor: default;"
                    tabindex="0"
                  />
                </g>
                <g>
                  <path
                    aria-label="2020/04/20, 39000."
                    class="fui-donut-arc__root"
                    d="M75.37,-26.822A80,80,0,0,1,-32.382,73.153L-21.985,50.415A55,55,0,0,0,51.918,-18.154Z"
                    id="_Pie__r_2o_second39000"
                    opacity="1"
                    role="img"
                    style="fill: #0078D4; cursor: default;"
                    tabindex="0"
                  />
                </g>
                <g>
                  <path
                    aria-label="2020/04/25, 45000."
                    class="fui-donut-arc__root"
                    d="M-34.148,72.346A80,80,0,0,1,-0.971,-79.994L-0.971,-54.991A55,55,0,0,0,-23.751,49.608Z"
                    id="_Pie__r_2o_third45000"
                    opacity="1"
                    role="img"
                    style="fill: #DADADA; cursor: default;"
                    tabindex="0"
                  />
                </g>
              </g>
            </svg>
          </div>
        </div>
        <div
          class="fui-cart__calloutContainer"
          id="callout_r_2p_"
        >
          <div
            class="fui-PopoverSurface"
            data-tabster="{\\"restorer\\":{\\"type\\":0}}"
            role="group"
            style="position: fixed; left: 0px; top: 0px; margin: 0px;"
          >
            <div
              class="fui-cart__calloutContentRoot"
            >
              <div
                class="fui-cart__calloutDateTimeContainer"
              >
                <div
                  class="fui-cart__calloutContentX"
                >
                   
                </div>
              </div>
              <div
                class="fui-cart__calloutInfoContainer"
                style="border-inline-start: 4px solid #E5E5E5; margin-top: 11px;"
              >
                <div
                  class="fui-cart__calloutBlockContainer"
                >
                  <div
                    class="fui-cart__calloutlegendText"
                  >
                    2020/04/30
                  </div>
                  <div
                    class="fui-cart__calloutContentY"
                    style="color: rgb(229, 229, 229);"
                  >
                    20,000
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="fui-donut__legendContainer"
        >
          <div
            aria-label="Legends"
            aria-multiselectable="false"
            class="fui-legend__root"
            data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
            role="listbox"
          >
            <div
              class="fui-Overflow fui-legend__resizableArea"
              style="text-align: center;"
            >
              <button
                aria-label="first"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
                />
                <div
                  class="fui-legend__text"
                >
                  first
                </div>
              </button>
              <button
                aria-label="second"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
                />
                <div
                  class="fui-legend__text"
                >
                  second
                </div>
              </button>
              <button
                aria-label="third"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
                />
                <div
                  class="fui-legend__text"
                >
                  third
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="fui-donut__root"
    >
      <div
        class="fui-donut__chartWrapper"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-donut__plotContainer"
          style="width: 200px; height: 160px;"
        >
          <svg
            aria-label="Donut chart example"
            class="fui-donut__chart"
            height="160"
            width="200"
          >
            <g
              transform="translate(100, 80)"
            >
              <g>
                <path
                  aria-label="2020/04/30, 20000."
                  class="fui-donut-arc__root"
                  d="M0.971,-79.994A80,80,0,0,1,74.697,-28.643L51.244,-19.975A55,55,0,0,0,0.971,-54.991Z"
                  id="_Pie__r_2o_first20000"
                  opacity="1"
                  role="img"
                  style="fill: #E5E5E5; cursor: default;"
                  tabindex="0"
                />
              </g>
              <g>
                <path
                  aria-label="2020/04/20, 39000."
                  class="fui-donut-arc__root"
                  d="M75.37,-26.822A80,80,0,0,1,-32.382,73.153L-21.985,50.415A55,55,0,0,0,51.918,-18.154Z"
                  id="_Pie__r_2o_second39000"
                  opacity="1"
                  role="img"
                  style="fill: #0078D4; cursor: default;"
                  tabindex="0"
                />
              </g>
              <g>
                <path
                  aria-label="2020/04/25, 45000."
                  class="fui-donut-arc__root"
                  d="M-34.148,72.346A80,80,0,0,1,-0.971,-79.994L-0.971,-54.991A55,55,0,0,0,-23.751,49.608Z"
                  id="_Pie__r_2o_third45000"
                  opacity="1"
                  role="img"
                  style="fill: #DADADA; cursor: default;"
                  tabindex="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="fui-cart__calloutContainer"
        id="callout_r_2p_"
      >
        <div
          class="fui-PopoverSurface"
          data-tabster="{\\"restorer\\":{\\"type\\":0}}"
          role="group"
          style="position: fixed; left: 0px; top: 0px; margin: 0px;"
        >
          <div
            class="fui-cart__calloutContentRoot"
          >
            <div
              class="fui-cart__calloutDateTimeContainer"
            >
              <div
                class="fui-cart__calloutContentX"
              >
                 
              </div>
            </div>
            <div
              class="fui-cart__calloutInfoContainer"
              style="border-inline-start: 4px solid #E5E5E5; margin-top: 11px;"
            >
              <div
                class="fui-cart__calloutBlockContainer"
              >
                <div
                  class="fui-cart__calloutlegendText"
                >
                  2020/04/30
                </div>
                <div
                  class="fui-cart__calloutContentY"
                  style="color: rgb(229, 229, 229);"
                >
                  20,000
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="fui-donut__legendContainer"
      >
        <div
          aria-label="Legends"
          aria-multiselectable="false"
          class="fui-legend__root"
          data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
          role="listbox"
        >
          <div
            class="fui-Overflow fui-legend__resizableArea"
            style="text-align: center;"
          >
            <button
              aria-label="first"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
              />
              <div
                class="fui-legend__text"
              >
                first
              </div>
            </button>
            <button
              aria-label="second"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
              />
              <div
                class="fui-legend__text"
              >
                second
              </div>
            </button>
            <button
              aria-label="third"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
              />
              <div
                class="fui-legend__text"
              >
                third
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DonutChart - mouse events Should render customized callout on mouseover 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    data-tabster="{\\"root\\":{}}"
  >
    <div>
      <div
        class="fui-donut__root"
      >
        <div
          class="fui-donut__chartWrapper"
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class="fui-donut__plotContainer"
            style="width: 200px; height: 160px;"
          >
            <svg
              aria-label="Donut chart example"
              class="fui-donut__chart"
              height="160"
              width="200"
            >
              <g
                transform="translate(100, 80)"
              >
                <g>
                  <path
                    aria-label="2020/04/30, 20000."
                    class="fui-donut-arc__root"
                    d="M0.971,-79.994A80,80,0,0,1,74.697,-28.643L51.244,-19.975A55,55,0,0,0,0.971,-54.991Z"
                    id="_Pie__r_31_first20000"
                    opacity="1"
                    role="img"
                    style="fill: #E5E5E5; cursor: default;"
                    tabindex="0"
                  />
                </g>
                <g>
                  <path
                    aria-label="2020/04/20, 39000."
                    class="fui-donut-arc__root"
                    d="M75.37,-26.822A80,80,0,0,1,-32.382,73.153L-21.985,50.415A55,55,0,0,0,51.918,-18.154Z"
                    id="_Pie__r_31_second39000"
                    opacity="1"
                    role="img"
                    style="fill: #0078D4; cursor: default;"
                    tabindex="0"
                  />
                </g>
                <g>
                  <path
                    aria-label="2020/04/25, 45000."
                    class="fui-donut-arc__root"
                    d="M-34.148,72.346A80,80,0,0,1,-0.971,-79.994L-0.971,-54.991A55,55,0,0,0,-23.751,49.608Z"
                    id="_Pie__r_31_third45000"
                    opacity="1"
                    role="img"
                    style="fill: #DADADA; cursor: default;"
                    tabindex="0"
                  />
                </g>
              </g>
            </svg>
          </div>
        </div>
        <div
          class="fui-cart__calloutContainer"
          id="callout_r_32_"
        >
          <div
            class="fui-PopoverSurface"
            data-tabster="{\\"restorer\\":{\\"type\\":0}}"
            role="group"
            style="position: fixed; left: 0px; top: 0px; margin: 0px;"
          >
            <div
              class="fui-cart__calloutContentRoot"
            >
              <div
                class="fui-cart__calloutDateTimeContainer"
              >
                <div
                  class="fui-cart__calloutContentX"
                >
                   
                </div>
              </div>
              <div
                class="fui-cart__calloutInfoContainer"
                style="border-inline-start: 4px solid #E5E5E5; margin-top: 11px;"
              >
                <div
                  class="fui-cart__calloutBlockContainer"
                >
                  <div
                    class="fui-cart__calloutlegendText"
                  >
                    2020/04/30
                  </div>
                  <div
                    class="fui-cart__calloutContentY"
                    style="color: rgb(229, 229, 229);"
                  >
                    20,000
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="fui-donut__legendContainer"
        >
          <div
            aria-label="Legends"
            aria-multiselectable="false"
            class="fui-legend__root"
            data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
            role="listbox"
          >
            <div
              class="fui-Overflow fui-legend__resizableArea"
              style="text-align: center;"
            >
              <button
                aria-label="first"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
                />
                <div
                  class="fui-legend__text"
                >
                  first
                </div>
              </button>
              <button
                aria-label="second"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
                />
                <div
                  class="fui-legend__text"
                >
                  second
                </div>
              </button>
              <button
                aria-label="third"
                aria-selected="false"
                class="fui-Button fui-legend__legend"
                data-overflow-item=""
                role="option"
                style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
                type="button"
              >
                <div
                  class="fui-legend__rect"
                  style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
                />
                <div
                  class="fui-legend__text"
                >
                  third
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="fui-donut__root"
    >
      <div
        class="fui-donut__chartWrapper"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-donut__plotContainer"
          style="width: 200px; height: 160px;"
        >
          <svg
            aria-label="Donut chart example"
            class="fui-donut__chart"
            height="160"
            width="200"
          >
            <g
              transform="translate(100, 80)"
            >
              <g>
                <path
                  aria-label="2020/04/30, 20000."
                  class="fui-donut-arc__root"
                  d="M0.971,-79.994A80,80,0,0,1,74.697,-28.643L51.244,-19.975A55,55,0,0,0,0.971,-54.991Z"
                  id="_Pie__r_31_first20000"
                  opacity="1"
                  role="img"
                  style="fill: #E5E5E5; cursor: default;"
                  tabindex="0"
                />
              </g>
              <g>
                <path
                  aria-label="2020/04/20, 39000."
                  class="fui-donut-arc__root"
                  d="M75.37,-26.822A80,80,0,0,1,-32.382,73.153L-21.985,50.415A55,55,0,0,0,51.918,-18.154Z"
                  id="_Pie__r_31_second39000"
                  opacity="1"
                  role="img"
                  style="fill: #0078D4; cursor: default;"
                  tabindex="0"
                />
              </g>
              <g>
                <path
                  aria-label="2020/04/25, 45000."
                  class="fui-donut-arc__root"
                  d="M-34.148,72.346A80,80,0,0,1,-0.971,-79.994L-0.971,-54.991A55,55,0,0,0,-23.751,49.608Z"
                  id="_Pie__r_31_third45000"
                  opacity="1"
                  role="img"
                  style="fill: #DADADA; cursor: default;"
                  tabindex="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="fui-cart__calloutContainer"
        id="callout_r_32_"
      >
        <div
          class="fui-PopoverSurface"
          data-tabster="{\\"restorer\\":{\\"type\\":0}}"
          role="group"
          style="position: fixed; left: 0px; top: 0px; margin: 0px;"
        >
          <div
            class="fui-cart__calloutContentRoot"
          >
            <div
              class="fui-cart__calloutDateTimeContainer"
            >
              <div
                class="fui-cart__calloutContentX"
              >
                 
              </div>
            </div>
            <div
              class="fui-cart__calloutInfoContainer"
              style="border-inline-start: 4px solid #E5E5E5; margin-top: 11px;"
            >
              <div
                class="fui-cart__calloutBlockContainer"
              >
                <div
                  class="fui-cart__calloutlegendText"
                >
                  2020/04/30
                </div>
                <div
                  class="fui-cart__calloutContentY"
                  style="color: rgb(229, 229, 229);"
                >
                  20,000
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="fui-donut__legendContainer"
      >
        <div
          aria-label="Legends"
          aria-multiselectable="false"
          class="fui-legend__root"
          data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
          role="listbox"
        >
          <div
            class="fui-Overflow fui-legend__resizableArea"
            style="text-align: center;"
          >
            <button
              aria-label="first"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
              />
              <div
                class="fui-legend__text"
              >
                first
              </div>
            </button>
            <button
              aria-label="second"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
              />
              <div
                class="fui-legend__text"
              >
                second
              </div>
            </button>
            <button
              aria-label="third"
              aria-selected="false"
              class="fui-Button fui-legend__legend"
              data-overflow-item=""
              role="option"
              style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
              type="button"
            >
              <div
                class="fui-legend__rect"
                style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
              />
              <div
                class="fui-legend__text"
              >
                third
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DonutChart snapShot testing Should elevate all smaller values to minimums 1`] = `
<div
  class="fui-donut__root"
>
  <div
    class="fui-donut__chartWrapper"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <div
      class="fui-donut__plotContainer"
      style="width: 200px; height: 160px;"
    >
      <svg
        aria-label="Donut chart example"
        class="fui-donut__chart"
        height="160"
        width="200"
      >
        <g
          transform="translate(100, 80)"
        >
          <g>
            <path
              aria-label="2020/04/30, 20000."
              class="fui-donut-arc__root"
              d="M0.8,-79.996A80,80,0,0,1,74.758,-28.483L0,0Z"
              id="_Pie__r_26_first20000"
              opacity="1"
              role="img"
              style="fill: #E5E5E5; cursor: default;"
              tabindex="0"
            />
          </g>
          <g>
            <path
              aria-label="2020/04/20, 39000."
              class="fui-donut-arc__root"
              d="M75.312,-26.983A80,80,0,0,1,-32.538,73.084L0,0Z"
              id="_Pie__r_26_second39000"
              opacity="1"
              role="img"
              style="fill: #0078D4; cursor: default;"
              tabindex="0"
            />
          </g>
          <g>
            <path
              aria-label="2020/04/25, 45000."
              class="fui-donut-arc__root"
              d="M-33.993,72.419A80,80,0,0,1,-0.8,-79.996L0,0Z"
              id="_Pie__r_26_third45000"
              opacity="1"
              role="img"
              style="fill: #DADADA; cursor: default;"
              tabindex="0"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    class="fui-cart__calloutContainer"
    id="callout_r_27_"
  />
  <div
    class="fui-donut__legendContainer"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="fui-legend__root"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
    >
      <div
        class="fui-Overflow fui-legend__resizableArea"
        style="text-align: center;"
      >
        <button
          aria-label="first"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
          />
          <div
            class="fui-legend__text"
          >
            first
          </div>
        </button>
        <button
          aria-label="second"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
          />
          <div
            class="fui-legend__text"
          >
            second
          </div>
        </button>
        <button
          aria-label="third"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
          />
          <div
            class="fui-legend__text"
          >
            third
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart snapShot testing Should render arc labels 1`] = `
<div
  class="fui-donut__root"
>
  <div
    class="fui-donut__chartWrapper"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <div
      class="fui-donut__plotContainer"
      style="width: 200px; height: 160px;"
    >
      <svg
        aria-label="Donut chart example"
        class="fui-donut__chart"
        height="160"
        width="200"
      >
        <g
          transform="translate(100, 80)"
        >
          <g>
            <path
              aria-label="2020/04/30, 20000."
              class="fui-donut-arc__root"
              d="M0.6,-59.997A60,60,0,0,1,56.068,-21.363L0,0Z"
              id="_Pie__r_20_first20000"
              opacity="1"
              role="img"
              style="fill: #E5E5E5; cursor: default;"
              tabindex="0"
            />
            <text
              aria-hidden="true"
              class="fui-donut-arc__arcLabel"
              dominant-baseline="auto"
              text-anchor="start"
              x="35.43557344375781"
              y="-50.87553571916512"
            >
              20k
            </text>
          </g>
          <g>
            <path
              aria-label="2020/04/20, 39000."
              class="fui-donut-arc__root"
              d="M56.484,-20.237A60,60,0,0,1,-24.404,54.813L0,0Z"
              id="_Pie__r_20_second39000"
              opacity="1"
              role="img"
              style="fill: #0078D4; cursor: default;"
              tabindex="0"
            />
            <text
              aria-hidden="true"
              class="fui-donut-arc__arcLabel"
              dominant-baseline="hanging"
              text-anchor="start"
              x="42.16983494620299"
              y="45.45002772947447"
            >
              39k
            </text>
          </g>
          <g>
            <path
              aria-label="2020/04/25, 45000."
              class="fui-donut-arc__root"
              d="M-25.495,54.314A60,60,0,0,1,-0.6,-59.997L0,0Z"
              id="_Pie__r_20_third45000"
              opacity="1"
              role="img"
              style="fill: #DADADA; cursor: default;"
              tabindex="0"
            />
            <text
              aria-hidden="true"
              class="fui-donut-arc__arcLabel"
              dominant-baseline="auto"
              text-anchor="end"
              x="-60.58001193073337"
              y="-13.19326170710649"
            >
              45k
            </text>
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    class="fui-cart__calloutContainer"
    id="callout_r_21_"
  />
  <div
    class="fui-donut__legendContainer"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="fui-legend__root"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
    >
      <div
        class="fui-Overflow fui-legend__resizableArea"
        style="text-align: center;"
      >
        <button
          aria-label="first"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
          />
          <div
            class="fui-legend__text"
          >
            first
          </div>
        </button>
        <button
          aria-label="second"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
          />
          <div
            class="fui-legend__text"
          >
            second
          </div>
        </button>
        <button
          aria-label="third"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
          />
          <div
            class="fui-legend__text"
          >
            third
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart snapShot testing Should render arc labels in percentage format 1`] = `
<div
  class="fui-donut__root"
>
  <div
    class="fui-donut__chartWrapper"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <div
      class="fui-donut__plotContainer"
      style="width: 200px; height: 160px;"
    >
      <svg
        aria-label="Donut chart example"
        class="fui-donut__chart"
        height="160"
        width="200"
      >
        <g
          transform="translate(100, 80)"
        >
          <g>
            <path
              aria-label="2020/04/30, 20000."
              class="fui-donut-arc__root"
              d="M0.6,-59.997A60,60,0,0,1,56.068,-21.363L0,0Z"
              id="_Pie__r_23_first20000"
              opacity="1"
              role="img"
              style="fill: #E5E5E5; cursor: default;"
              tabindex="0"
            />
            <text
              aria-hidden="true"
              class="fui-donut-arc__arcLabel"
              dominant-baseline="auto"
              text-anchor="start"
              x="35.43557344375781"
              y="-50.87553571916512"
            >
              19%
            </text>
          </g>
          <g>
            <path
              aria-label="2020/04/20, 39000."
              class="fui-donut-arc__root"
              d="M56.484,-20.237A60,60,0,0,1,-24.404,54.813L0,0Z"
              id="_Pie__r_23_second39000"
              opacity="1"
              role="img"
              style="fill: #0078D4; cursor: default;"
              tabindex="0"
            />
            <text
              aria-hidden="true"
              class="fui-donut-arc__arcLabel"
              dominant-baseline="hanging"
              text-anchor="start"
              x="42.16983494620299"
              y="45.45002772947447"
            >
              38%
            </text>
          </g>
          <g>
            <path
              aria-label="2020/04/25, 45000."
              class="fui-donut-arc__root"
              d="M-25.495,54.314A60,60,0,0,1,-0.6,-59.997L0,0Z"
              id="_Pie__r_23_third45000"
              opacity="1"
              role="img"
              style="fill: #DADADA; cursor: default;"
              tabindex="0"
            />
            <text
              aria-hidden="true"
              class="fui-donut-arc__arcLabel"
              dominant-baseline="auto"
              text-anchor="end"
              x="-60.58001193073337"
              y="-13.19326170710649"
            >
              43%
            </text>
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    class="fui-cart__calloutContainer"
    id="callout_r_24_"
  />
  <div
    class="fui-donut__legendContainer"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="fui-legend__root"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
    >
      <div
        class="fui-Overflow fui-legend__resizableArea"
        style="text-align: center;"
      >
        <button
          aria-label="first"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
          />
          <div
            class="fui-legend__text"
          >
            first
          </div>
        </button>
        <button
          aria-label="second"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
          />
          <div
            class="fui-legend__text"
          >
            second
          </div>
        </button>
        <button
          aria-label="third"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
          />
          <div
            class="fui-legend__text"
          >
            third
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart snapShot testing renders DonutChart correctly 1`] = `
<div
  class="fui-donut__root"
>
  <div
    class="fui-donut__chartWrapper"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <div
      class="fui-donut__plotContainer"
      style="width: 200px; height: 160px;"
    >
      <svg
        aria-label="Donut chart example"
        class="fui-donut__chart"
        height="160"
        width="200"
      >
        <g
          transform="translate(100, 80)"
        >
          <g>
            <path
              aria-label="2020/04/30, 20000."
              class="fui-donut-arc__root"
              d="M0.971,-79.994A80,80,0,0,1,74.697,-28.643L51.244,-19.975A55,55,0,0,0,0.971,-54.991Z"
              id="_Pie__r_1g_first20000"
              opacity="1"
              role="img"
              style="fill: #E5E5E5; cursor: default;"
              tabindex="0"
            />
          </g>
          <g>
            <path
              aria-label="2020/04/20, 39000."
              class="fui-donut-arc__root"
              d="M75.37,-26.822A80,80,0,0,1,-32.382,73.153L-21.985,50.415A55,55,0,0,0,51.918,-18.154Z"
              id="_Pie__r_1g_second39000"
              opacity="1"
              role="img"
              style="fill: #0078D4; cursor: default;"
              tabindex="0"
            />
          </g>
          <g>
            <path
              aria-label="2020/04/25, 45000."
              class="fui-donut-arc__root"
              d="M-34.148,72.346A80,80,0,0,1,-0.971,-79.994L-0.971,-54.991A55,55,0,0,0,-23.751,49.608Z"
              id="_Pie__r_1g_third45000"
              opacity="1"
              role="img"
              style="fill: #DADADA; cursor: default;"
              tabindex="0"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    class="fui-cart__calloutContainer"
    id="callout_r_1h_"
  />
  <div
    class="fui-donut__legendContainer"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="fui-legend__root"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
    >
      <div
        class="fui-Overflow fui-legend__resizableArea"
        style="text-align: center;"
      >
        <button
          aria-label="first"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
          />
          <div
            class="fui-legend__text"
          >
            first
          </div>
        </button>
        <button
          aria-label="second"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
          />
          <div
            class="fui-legend__text"
          >
            second
          </div>
        </button>
        <button
          aria-label="third"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
          />
          <div
            class="fui-legend__text"
          >
            third
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart snapShot testing renders DonutChart correctly without color points 1`] = `
<div
  class="fui-donut__root"
>
  <div
    class="fui-donut__chartWrapper"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <div
      class="fui-donut__plotContainer"
      style="width: 200px; height: 160px;"
    >
      <svg
        aria-label="Donut chart example"
        class="fui-donut__chart"
        height="160"
        width="200"
      >
        <g
          transform="translate(100, 80)"
        >
          <g>
            <path
              aria-label="2020/04/30, 20000."
              class="fui-donut-arc__root"
              d="M0.8,-79.996A80,80,0,0,1,74.758,-28.483L0,0Z"
              id="_Pie__r_1j_first20000"
              opacity="1"
              role="img"
              style="fill: #637cef; cursor: default;"
              tabindex="0"
            />
          </g>
          <g>
            <path
              aria-label="2020/04/20, 39000."
              class="fui-donut-arc__root"
              d="M75.312,-26.983A80,80,0,0,1,-32.538,73.084L0,0Z"
              id="_Pie__r_1j_second39000"
              opacity="1"
              role="img"
              style="fill: #e3008c; cursor: default;"
              tabindex="0"
            />
          </g>
          <g>
            <path
              aria-label="2020/04/25, 45000."
              class="fui-donut-arc__root"
              d="M-33.993,72.419A80,80,0,0,1,-0.8,-79.996L0,0Z"
              id="_Pie__r_1j_third45000"
              opacity="1"
              role="img"
              style="fill: #2aa0a4; cursor: default;"
              tabindex="0"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    class="fui-cart__calloutContainer"
    id="callout_r_1k_"
  />
  <div
    class="fui-donut__legendContainer"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="fui-legend__root"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
    >
      <div
        class="fui-Overflow fui-legend__resizableArea"
        style="text-align: center;"
      >
        <button
          aria-label="first"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #637cef; --rect-borderColor: #637cef;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(99, 124, 239); border-color: #637cef; --rect-content-high-contrast: linear-gradient(to right, #637cef, #637cef);"
          />
          <div
            class="fui-legend__text"
          >
            first
          </div>
        </button>
        <button
          aria-label="second"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #e3008c; --rect-borderColor: #e3008c;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(227, 0, 140); border-color: #e3008c; --rect-content-high-contrast: linear-gradient(to right, #e3008c, #e3008c);"
          />
          <div
            class="fui-legend__text"
          >
            second
          </div>
        </button>
        <button
          aria-label="third"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #2aa0a4; --rect-borderColor: #2aa0a4;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(42, 160, 164); border-color: #2aa0a4; --rect-content-high-contrast: linear-gradient(to right, #2aa0a4, #2aa0a4);"
          />
          <div
            class="fui-legend__text"
          >
            third
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart snapShot testing renders enabledLegendsWrapLines correctly 1`] = `
<div
  class="fui-donut__root"
>
  <div
    class="fui-donut__chartWrapper"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <div
      class="fui-donut__plotContainer"
      style="width: 200px; height: 160px;"
    >
      <svg
        aria-label="Donut chart example"
        class="fui-donut__chart"
        height="160"
        width="200"
      >
        <g
          transform="translate(100, 80)"
        >
          <g>
            <path
              aria-label="2020/04/30, 20000."
              class="fui-donut-arc__root"
              d="M0.8,-79.996A80,80,0,0,1,74.758,-28.483L0,0Z"
              id="_Pie__r_1r_first20000"
              opacity="1"
              role="img"
              style="fill: #E5E5E5; cursor: default;"
              tabindex="0"
            />
          </g>
          <g>
            <path
              aria-label="2020/04/20, 39000."
              class="fui-donut-arc__root"
              d="M75.312,-26.983A80,80,0,0,1,-32.538,73.084L0,0Z"
              id="_Pie__r_1r_second39000"
              opacity="1"
              role="img"
              style="fill: #0078D4; cursor: default;"
              tabindex="0"
            />
          </g>
          <g>
            <path
              aria-label="2020/04/25, 45000."
              class="fui-donut-arc__root"
              d="M-33.993,72.419A80,80,0,0,1,-0.8,-79.996L0,0Z"
              id="_Pie__r_1r_third45000"
              opacity="1"
              role="img"
              style="fill: #DADADA; cursor: default;"
              tabindex="0"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    class="fui-cart__calloutContainer"
    id="callout_r_1s_"
  />
  <div
    class="fui-donut__legendContainer"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="fui-legend__root"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
      style="justify-content: center; flex-wrap: wrap;"
    >
      <div
        class="fui-legend__resizableArea"
        style="display: flex; flex-wrap: wrap; overflow: auto;"
      >
        <div
          class="fui-legend__legendContainer"
        >
          <button
            aria-label="first"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
            />
            <div
              class="fui-legend__text"
            >
              first
            </div>
          </button>
        </div>
        <div
          class="fui-legend__legendContainer"
        >
          <button
            aria-label="second"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
            />
            <div
              class="fui-legend__text"
            >
              second
            </div>
          </button>
        </div>
        <div
          class="fui-legend__legendContainer"
        >
          <button
            aria-label="third"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
            />
            <div
              class="fui-legend__text"
            >
              third
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart snapShot testing renders hideLegend correctly 1`] = `
<div
  class="fui-donut__root"
>
  <div
    class="fui-donut__chartWrapper"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <div
      class="fui-donut__plotContainer"
      style="width: 200px; height: 200px;"
    >
      <svg
        aria-label="Donut chart example"
        class="fui-donut__chart"
        height="200"
        width="200"
      >
        <g
          transform="translate(100, 100)"
        >
          <g>
            <path
              aria-label="2020/04/30, 20000."
              class="fui-donut-arc__root"
              d="M1,-99.995A100,100,0,0,1,93.447,-35.604L0,0Z"
              id="_Pie__r_1m_first20000"
              opacity="1"
              role="img"
              style="fill: #E5E5E5; cursor: default;"
              tabindex="0"
            />
          </g>
          <g>
            <path
              aria-label="2020/04/20, 39000."
              class="fui-donut-arc__root"
              d="M94.14,-33.728A100,100,0,0,1,-40.673,91.355L0,0Z"
              id="_Pie__r_1m_second39000"
              opacity="1"
              role="img"
              style="fill: #0078D4; cursor: default;"
              tabindex="0"
            />
          </g>
          <g>
            <path
              aria-label="2020/04/25, 45000."
              class="fui-donut-arc__root"
              d="M-42.492,90.523A100,100,0,0,1,-1,-99.995L0,0Z"
              id="_Pie__r_1m_third45000"
              opacity="1"
              role="img"
              style="fill: #DADADA; cursor: default;"
              tabindex="0"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    class="fui-cart__calloutContainer"
    id="callout_r_1n_"
  />
</div>
`;

exports[`DonutChart snapShot testing renders hideTooltip correctly 1`] = `
<div
  class="fui-donut__root"
>
  <div
    class="fui-donut__chartWrapper"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <div
      class="fui-donut__plotContainer"
      style="width: 200px; height: 160px;"
    >
      <svg
        aria-label="Donut chart example"
        class="fui-donut__chart"
        height="160"
        width="200"
      >
        <g
          transform="translate(100, 80)"
        >
          <g>
            <path
              aria-label="2020/04/30, 20000."
              class="fui-donut-arc__root"
              d="M0.8,-79.996A80,80,0,0,1,74.758,-28.483L0,0Z"
              id="_Pie__r_1o_first20000"
              opacity="1"
              role="img"
              style="fill: #E5E5E5; cursor: default;"
              tabindex="0"
            />
          </g>
          <g>
            <path
              aria-label="2020/04/20, 39000."
              class="fui-donut-arc__root"
              d="M75.312,-26.983A80,80,0,0,1,-32.538,73.084L0,0Z"
              id="_Pie__r_1o_second39000"
              opacity="1"
              role="img"
              style="fill: #0078D4; cursor: default;"
              tabindex="0"
            />
          </g>
          <g>
            <path
              aria-label="2020/04/25, 45000."
              class="fui-donut-arc__root"
              d="M-33.993,72.419A80,80,0,0,1,-0.8,-79.996L0,0Z"
              id="_Pie__r_1o_third45000"
              opacity="1"
              role="img"
              style="fill: #DADADA; cursor: default;"
              tabindex="0"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    class="fui-cart__calloutContainer"
    id="callout_r_1p_"
  />
  <div
    class="fui-donut__legendContainer"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="fui-legend__root"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
    >
      <div
        class="fui-Overflow fui-legend__resizableArea"
        style="text-align: center;"
      >
        <button
          aria-label="first"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
          />
          <div
            class="fui-legend__text"
          >
            first
          </div>
        </button>
        <button
          aria-label="second"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
          />
          <div
            class="fui-legend__text"
          >
            second
          </div>
        </button>
        <button
          aria-label="third"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
          />
          <div
            class="fui-legend__text"
          >
            third
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart snapShot testing renders value inside onf the pie 1`] = `
<div
  class="fui-donut__root"
>
  <div
    class="fui-donut__chartWrapper"
    data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
  >
    <div
      class="fui-donut__plotContainer"
      style="width: 200px; height: 160px;"
    >
      <svg
        aria-label="Donut chart example"
        class="fui-donut__chart"
        height="160"
        width="200"
      >
        <g
          transform="translate(100, 80)"
        >
          <g>
            <path
              aria-label="2020/04/30, 20000."
              class="fui-donut-arc__root"
              d="M0.8,-79.996A80,80,0,0,1,74.758,-28.483L0,0Z"
              id="_Pie__r_1t_first20000"
              opacity="1"
              role="img"
              style="fill: #E5E5E5; cursor: default;"
              tabindex="0"
            />
          </g>
          <g>
            <path
              aria-label="2020/04/20, 39000."
              class="fui-donut-arc__root"
              d="M75.312,-26.983A80,80,0,0,1,-32.538,73.084L0,0Z"
              id="_Pie__r_1t_second39000"
              opacity="1"
              role="img"
              style="fill: #0078D4; cursor: default;"
              tabindex="0"
            />
          </g>
          <g>
            <path
              aria-label="2020/04/25, 45000."
              class="fui-donut-arc__root"
              d="M-33.993,72.419A80,80,0,0,1,-0.8,-79.996L0,0Z"
              id="_Pie__r_1t_third45000"
              opacity="1"
              role="img"
              style="fill: #DADADA; cursor: default;"
              tabindex="0"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    class="fui-cart__calloutContainer"
    id="callout_r_1u_"
  />
  <div
    class="fui-donut__legendContainer"
  >
    <div
      aria-label="Legends"
      aria-multiselectable="false"
      class="fui-legend__root"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
      role="listbox"
    >
      <div
        class="fui-Overflow fui-legend__resizableArea"
        style="text-align: center;"
      >
        <button
          aria-label="first"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #E5E5E5; --rect-borderColor: #E5E5E5;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(229, 229, 229); border-color: #e5e5e5; --rect-content-high-contrast: linear-gradient(to right, #E5E5E5, #E5E5E5);"
          />
          <div
            class="fui-legend__text"
          >
            first
          </div>
        </button>
        <button
          aria-label="second"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #0078D4; --rect-borderColor: #0078D4;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078D4, #0078D4);"
          />
          <div
            class="fui-legend__text"
          >
            second
          </div>
        </button>
        <button
          aria-label="third"
          aria-selected="false"
          class="fui-Button fui-legend__legend"
          data-overflow-item=""
          role="option"
          style="--rect-height: 12px; --rect-backgroundColor: #DADADA; --rect-borderColor: #DADADA;"
          type="button"
        >
          <div
            class="fui-legend__rect"
            style="height: 12px; background-color: rgb(218, 218, 218); border-color: #dadada; --rect-content-high-contrast: linear-gradient(to right, #DADADA, #DADADA);"
          />
          <div
            class="fui-legend__text"
          >
            third
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
